Closes #2 - containers e títulos

--- a/menu.html
+++ b/menu.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conteiner">
-<h1> Menu - faça sua escolha </h1>
-<h2> Prato principal </h2>
-<h2> acompanhamentos </h2>
-<div class="dados">
+    <div class="container">
+<h1> Menu - faça A Sua Escolha </h1>
+<div class="prato-principal-container">
+    <h2> Prato principal </h2>
+    <h3> Todos os pratos acompanham arroz, feijão e a sobremesa do dia. </h3>
+</div>
+<div class="acompanhamento-container">
+    <h2> Acompanhamentos </h2>
+    <h3> Porções para uma pessoa. </h3>
+
+</div>
+
+<div class="dados-container">
     <h2> dados pessoais </h2>
     <input type="text"> </input>
     <input type="text"> </input>
     <input type="text"> </input>
-    <button> Calcular </button>
 </div>
+<button> Calcular </button>
     </div>
 </body>
 </html>
